Expand API
Add in age restriction functionality, the (untested) collision support, and
stub out the additions of screening and tags functionality
