# docs/swagger.json
@@ -972,6 +972,55 @@
                 }
             }
         },
+        "/panel/{id}/restricted": {
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Set panel age restriction",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "panels"
+                ],
+                "summary": "Set panel age restriction",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Panel Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Age restriction state",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.PanelAgeRestrictionState"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.SuccessMsg"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.FailureMsg"
+                        }
+                    }
+                }
+            }
+        },
         "/panel/{id}/schedule": {
             "get": {
                 "description": "Retrieve panel schedule by the panel Id",
@@ -1005,6 +1054,53 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Set the scheduled time for a panel",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "panels"
+                ],
+                "summary": "Set the scheduled time for a panel",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Panel Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Scheduled Time",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.PanelScheduledTime"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.SuccessMsg"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.FailureMsg"
+                        }
+                    }
+                }
             }
         },
         "/panels": {
@@ -1017,6 +1113,32 @@
                     "panels"
                 ],
                 "summary": "Retrieve list of all approved panels",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.PanelList"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.FailureMsg"
+                        }
+                    }
+                }
+            }
+        },
+        "/panels/ByLocationId/{id}": {
+            "get": {
+                "description": "Retrieve list of all approved panels by location Id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "panels"
+                ],
+                "summary": "Retrieve list of all approved panels by location Id",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1576,6 +1698,9 @@
                 "Id": {
                     "type": "integer"
                 },
+                "ageRestricted": {
+                    "type": "boolean"
+                },
                 "approvalDateTime": {
                     "type": "string"
                 },
@@ -1611,6 +1736,14 @@
                 }
             }
         },
+        "model.PanelAgeRestrictionState": {
+            "type": "object",
+            "properties": {
+                "restrictionState": {
+                    "type": "boolean"
+                }
+            }
+        },
         "model.PanelApproval": {
             "type": "object",
             "properties": {
@@ -1627,6 +1760,20 @@
                     "items": {
                         "$ref": "#/definitions/model.Panel"
                     }
+                }
+            }
+        },
+        "model.PanelScheduledTime": {
+            "type": "object",
+            "properties": {
+                "durationInMinutes": {
+                    "type": "integer"
+                },
+                "locationId": {
+                    "type": "integer"
+                },
+                "scheduledTime": {
+                    "type": "string"
                 }
             }
         },
